<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardView"
        android:padding="@dimen/dimen_16dp"
        android:layout_margin="@dimen/dimen_8dp"
        app:cardElevation="@dimen/dimen_4dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ready"
            android:orientation="horizontal"
            android:weightSum="3">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/RadioButtonStyle"
                android:id="@+id/rdyEasy"
                android:text="@string/easy"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/RadioButtonStyle"
                android:id="@+id/rdyMedium"
                android:text="@string/medium"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/RadioButtonStyle"
                android:id="@+id/rdyHard"
                android:text="@string/hard"/>

        </RadioGroup>

    </android.support.v7.widget.CardView>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchAlarm"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/timePicker"/>

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:id="@+id/timePicker">
    </TimePicker>

    <info.hoang8f.widget.FButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginRight="@dimen/dimen_4dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        app:fButtonColor="@color/colorPrimary"
        app:shadowColor="@color/colorBlack"
        app:shadowEnabled="true"
        app:shadowHeight="@dimen/dimen_2dp"/>

</RelativeLayout>